--- a/HTLM/CV.html
+++ b/HTLM/CV.html
@@ -72,19 +72,18 @@
                     <!-- <FONT COLOR="#00 00 33" ALIGN="right">NOM:RANDRIANARISOA</FONT> -->
                 <h4>A propos:</h4>
                     <P><FONT SIZE="2.5">
-                          &nbsp&nbsp&nbsp&nbspPassionnée par le monde de l'informatique depuis mon plus jeune âge, je suis une <br> étudiante dynamique et déterminée à exploiter ma créativité et mes compétences <br> techniques pour contribuer de manière significative à des projets innovants. <br> Actuellement en cours de poursuite d'un diplôme en Informatique et Technologie à <br> l'Université d'ANtananarivo (MIT), j'ai acquis une solide compréhension des principes<FONT color="White">.</FONT> <br> fondamentaux de la programmation C, mathematique et cinematique <br> avancE et de l'OS Linux.
+                          &nbsp&nbsp&nbsp&nbspPassionnée par le monde de l'informatique depuis mon plus jeune âge, je suis une <br> étudiante dynamique et déterminée à exploiter ma créativité et mes compétences <br> techniques pour contribuer de manière significative à des projets innovants. <br> Actuellement en cours de poursuite d'un diplôme en Informatique et Technologie à <br> l'Université d'Antananarivo (MIT), j'ai acquis une solide compréhension des principes<FONT color="White">.</FONT> <br> fondamentaux de la programmation C, mathematique et cinematique <br> avancE et de l'OS Linux.
                     </FONT></P>
                 <BR>
                 <h4>Etudes et formations:</h4>
                     <LI><FONT SIZE="2.5">2021: Baccalaureat (Serie C)</FONT></LI>
                     <LI><FONT SIZE="2.5">2022: Leadership (Online course given by American Embassy)</FONT></LI>
-                    <LI><FONT SIZE="2.5">2022: Mathematique et Initiation a l'informatique (Online course : Fun MOOC)</FONT></LI>
                     <LI><FONT SIZE="2.5">2023-aujourd'hui: Informatique et Technologie (Université d'Ankatso)</FONT></LI>
                 <BR>
                     <h4>Comptetences techniques:</h4>
                         <LI>--><FONT SIZE="2.5">Maitrise de la langage C</FONT></LI>
                         <LI>--><FONT SIZE="2.5">Maitrise du systeme LINUX</FONT></LI>
-                        <LI>--><FONT SIZE="2.5">Mathematique et cinematique avancé</FONT></LI>
+                        <LI>--><FONT SIZE="2.5">Mathematique et cinematique avancés</FONT></LI>
                         <LI>--><FONT SIZE="2.5">Informatique bureautique</FONT></LI>
                 </UL>
             </TD>            
