CV PagePerso Formulaire

--- a/HTLM/CV_PagePerso/CV.html
+++ b/HTLM/CV_PagePerso/CV.html
@@ -7,7 +7,7 @@
  
     <table>
     <TR>
-    <TD><FONT COLOR="White">......................................</FONT></TD>
+        <TD><pre>                           </pre></TD>
 
     <!-- ------------------------------------------------------------------------------------ -->
     <CENTER>
@@ -16,7 +16,8 @@
         <TR>
             <!-- <th colspan="2"></th> -->
             <TD><img SRC="femme.avif" width="250" height="300"></TD>
-            <TD><FONT COLOR="pink">.................................................</FONT></TD>
+            <!-- espacement -->
+            <TD><pre>                            </pre></TD>
             <TD>
                 <UL>
                     <LI>NOM:RANDRIANARISOA</LI>
@@ -28,7 +29,7 @@
 		    <LI>AGE: 18ans</LI>
                 </UL>
             </TD>
-            <TD><FONT COLOR="pink">..........</FONT></TD>
+            <TD><pre>              </pre></TD>
         </TR>
     </TABLE>
 <!-- -------------------------------------------------------------------------------- -->
@@ -40,23 +41,23 @@
                     <!-- <FONT COLOR="#00 00 33" ALIGN="right">NOM:RANDRIANARISOA</FONT> -->
 		<BR>
 		<BR>
-                <h4>Contacts:</h4><FONT style="line-height:2;">
-                    <IMG SRC="adresse.jpg" WIDTH="15" HEIGH="15"><FONT SIZE="1">&nbsp&nbsp&nbsp&nbsp&nbsp&nbspAdresse: Lot K1 056 Ivato</FONT><BR>
-                    <IMG SRC="tel.png" WIDTH="15" HEIGH="15"><FONT SIZE="1">&nbsp&nbsp&nbsp&nbsp&nbsp&nbspTelephone: O347729419</FONT><BR>
-                    <IMG SRC="mail.webp" WIDTH="15" HEIGH="15"><FONT SIZE="1">&nbsp&nbsp&nbsp&nbsp&nbsp&nbspE-mail: atnastsanta@gmail.com<FONT color="#EF DF DF">..............&nbsp</FONT></FONT></BR>
-                    <IMG SRC="linkedIn.png" WIDTH="15" HEIGH="15"><FONT SIZE="1">&nbsp&nbsp&nbsp&nbsp&nbsp&nbspLinkedIn: Tsanta Randrianarisoa</FONT><BR>
-                    <IMG SRC="page.png" WIDTH="15" HEIGH="15"><FONT SIZE="1">&nbsp&nbsp&nbsp&nbsp&nbsp&nbspMa page personnelle: <A HREF="maPage.html">Ma page</A></FONT><BR>
+                <h4>Contacts:</h4><FONT style="line-height:1;">
+                    <pre><IMG SRC="adresse.jpg" WIDTH="15" HEIGH="15"><FONT SIZE="1">   Adresse: Lot K1 056 Ivato</FONT></pre>
+                    <pre><IMG SRC="tel.png" WIDTH="15" HEIGH="15"><FONT SIZE="1">    Telephone: O347729419</FONT></pre>
+                    <pre><IMG SRC="mail.webp" WIDTH="15" HEIGH="15"><FONT SIZE="1">  E-mail: atnastsanta@gmail.com           </FONT></pre>
+                    <pre><IMG SRC="linkedIn.png" WIDTH="15" HEIGH="15"><FONT SIZE="1">   LinkedIn: Tsanta Randrianarisoa</FONT></pre>
+                    <pre><IMG SRC="page.png" WIDTH="15" HEIGH="15"><FONT SIZE="1">   Ma page personnelle: <A HREF="maPage.html" target="_blank">Ma page</A></FONT></pre>
                 <BR>
                 <h4>Langues:</h4>
-                    <IMG SRC="malagasy.webp" WIDTH="15" HEIGH="15"><FONT SIZE="1">&nbsp&nbsp&nbsp&nbsp&nbsp&nbspMalagasy : Bon</FONT><BR>
-                    <IMG SRC="francais.webp  " WIDTH="15" HEIGH="15"><FONT SIZE="1">&nbsp&nbsp&nbsp&nbsp&nbsp&nbspFrancais professionnel: Bon</FONT><BR>
-                    <IMG SRC="Anglais.svg" WIDTH="15" HEIGH="15"><FONT SIZE="1">&nbsp&nbsp&nbsp&nbsp&nbsp&nbspAnglais: Assez-bon</FONT><BR>
+                    <pre><IMG SRC="malagasy.webp" WIDTH="15" HEIGH="15"><FONT SIZE="1">   Malagasy : Langue maternelle</FONT></pre>
+                    <pre><IMG SRC="francais.webp  " WIDTH="15" HEIGH="15"><FONT SIZE="1">   Francais professionnel: Bon</FONT></pre>
+                    <pre><IMG SRC="Anglais.svg" WIDTH="15" HEIGH="15"><FONT SIZE="1">   Anglais: Assez-bon</FONT></pre>
 
                 <BR>
                     <h4>Atouts:</h4>
-                        <IMG SRC="ouverte.jpg" WIDTH="15" HEIGH="15"><FONT SIZE="1,5">&nbsp&nbsp&nbsp&nbsp&nbsp&nbspOuverte d'esprit</FONT><BR>
-                        <IMG SRC="sociable.jpg" WIDTH="15" HEIGH="15"><FONT SIZE="1,5">&nbsp&nbsp&nbsp&nbsp&nbsp&nbspSociable</FONT><BR>
-                        <IMG SRC="responsable.png" WIDTH="15" HEIGH="15"><FONT SIZE="1,5">&nbsp&nbsp&nbsp&nbsp&nbsp&nbspResponsable</FONT><BR>
+                        <pre><IMG SRC="ouverte.jpg" WIDTH="15" HEIGH="15"><FONT SIZE="1,5">  Ouverte d'esprit</FONT></pre>
+                        <pre><IMG SRC="sociable.jpg" WIDTH="15" HEIGH="15"><FONT SIZE="1,5">    Sociable</FONT></pre>
+                        <pre><IMG SRC="responsable.png" WIDTH="15" HEIGH="15"><FONT SIZE="1,5">   Responsable</FONT></pre>
                 </FONT>
         <BR>
 		<BR>
@@ -72,18 +73,19 @@
                     <!-- <FONT COLOR="#00 00 33" ALIGN="right">NOM:RANDRIANARISOA</FONT> -->
                 <h4>A propos:</h4>
                     <P><FONT SIZE="2.5">
-                          &nbsp&nbsp&nbsp&nbspPassionnée par le monde de l'informatique depuis mon plus jeune âge, je suis une <br> étudiante dynamique et déterminée à exploiter ma créativité et mes compétences <br> techniques pour contribuer de manière significative à des projets innovants. <br> Actuellement en cours de poursuite d'un diplôme en Informatique et Technologie à <br> l'Université d'Antananarivo (MIT), j'ai acquis une solide compréhension des principes<FONT color="White">.</FONT> <br> fondamentaux de la programmation C, mathematique et cinematique <br> avancE et de l'OS Linux.
+                          &nbsp&nbsp&nbsp&nbsp&nbsp Passionnée par le monde de l'informatique depuis mon plus jeune âge, je suis une &nbsp <br> étudiante dynamique et déterminée à exploiter ma créativité et mes compétences <br> techniques pour contribuer de manière significative à des projets innovants. <br> Actuellement en cours de poursuite d'un diplôme en Informatique et Technologie à <br> l'Université d'ANtananarivo (MIT), j'ai acquis une solide compréhension des principes<FONT color="White">.</FONT> <br> fondamentaux de la programmation C, mathematique et cinematique <br> avancE et de l'OS Linux.
                     </FONT></P>
                 <BR>
                 <h4>Etudes et formations:</h4>
                     <LI><FONT SIZE="2.5">2021: Baccalaureat (Serie C)</FONT></LI>
                     <LI><FONT SIZE="2.5">2022: Leadership (Online course given by American Embassy)</FONT></LI>
+                    <LI><FONT SIZE="2.5">2022: Mathematique et Initiation a l'informatique (Online course : Fun MOOC)</FONT></LI>
                     <LI><FONT SIZE="2.5">2023-aujourd'hui: Informatique et Technologie (Université d'Ankatso)</FONT></LI>
                 <BR>
                     <h4>Comptetences techniques:</h4>
                         <LI>--><FONT SIZE="2.5">Maitrise de la langage C</FONT></LI>
                         <LI>--><FONT SIZE="2.5">Maitrise du systeme LINUX</FONT></LI>
-                        <LI>--><FONT SIZE="2.5">Mathematique et cinematique avancés</FONT></LI>
+                        <LI>--><FONT SIZE="2.5">Mathematique et cinematique avancé</FONT></LI>
                         <LI>--><FONT SIZE="2.5">Informatique bureautique</FONT></LI>
                 </UL>
             </TD>            
@@ -114,17 +116,18 @@
                 <UL>
                     <h5>References:</h5>
                     <LI>--><FONT SIZE="1">Nom: Tsanta Randrianarisoa</FONT></LI>
-                    <LI>--><FONT SIZE="1">E-mail: atnastsanta@gmail.com<FONT color="#EE EF 90">........................</FONT></FONT></LI>
+                    <LI>--><FONT SIZE="1">E-mail: atnastsanta@gmail.com<FONT color="#EE EF 90"></FONT></FONT></LI>
                     <LI>--><FONT SIZE="1">Tel: 0347729419</FONT></LI>
                 </UL>
+                <pre>                                          </pre>
             </TD>
         </TR>
         </CENTER>
     </TABLE>
      </TD>
 <!-- ------------------------------------------------------------------------ -->
- 
-    <TD><FONT COLOR="white">..................</FONT></TD>
+<!--  
+    <TD><FONT COLOR="white">..................</FONT></TD> -->
     </TR>
 </table>
  
