--- a/HTLM/formulaire/formulaire.html
+++ b/HTLM/formulaire/formulaire.html
@@ -17,50 +17,50 @@
                 <TD style="border-radius: 8% 8% 8% 8%;box-shadow:2vw 2vw 5vw;"><CENTER>
                 <FORM ACTION="essai.txt" METHOD="POST">
                     <BR><BR><H1><FONT COLOR="Brown">Formulaire d'inscription</FONT></H1><br><br><br>
-                    Nom :&nbsp&nbsp
-                        <INPUT style="width: 250;" TYPE="text" NAME="Nom"/>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-                    Prenom :&nbsp&nbsp
-                        <INPUT style="width: 250;" TYPE="text" NAME="Prenom"/><BR><BR><BR><BR>
-                    Date de naissance :&nbsp&nbsp
-                        <INPUT TYPE="text" VALUE="JJ/MM/AA" NAME="DateNaissance"/>&nbsp&nbsp&nbsp&nbsp
-                    Lieu de naissance :&nbsp&nbsp
+                    Nom :  &nbsp&nbsp
+                        <INPUT style="width: 250;" TYPE="text" NAME="Nom" required/>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                    Prenom : &nbsp&nbsp
+                        <INPUT style="width: 250;" TYPE="text" NAME="Prenom" required/><BR><BR><BR><BR>
+                    Date de naissance : &nbsp&nbsp
+                        <INPUT TYPE="date" NAME="DateNaissance" required/>&nbsp&nbsp&nbsp&nbsp
+                    Lieu de naissance : &nbsp&nbsp
                         <INPUT TYPE="text" NAME="LieuNaissance"/><BR><BR><BR><BR>
-                    Adresse :&nbsp&nbsp
-                        <INPUT TYPE="text" NAME="Adresse"/>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-                    Genre :&nbsp&nbsp
+                    Adresse : &nbsp&nbsp
+                        <INPUT TYPE="text" NAME="Adresse" required/>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                    Genre : &nbsp&nbsp
                         <SELECT NAME="Genre">
                             <OPTION>Homme</OPTION>
                             <OPTION>Femme</OPTION>
                             <OPTION>Autre</OPTION>
                         </SELECT><BR><BR><BR><BR>
-                    Annee d'obtention du bacc :&nbsp&nbsp
+                    Annee d'obtention du bacc : &nbsp&nbsp
                         <SELECT NAME="ObtentionBacc">
                             <OPTION>2020</OPTION>
                             <OPTION>2021</OPTION>
                             <OPTION>2022</OPTION>
                             <OPTION>2023</OPTION>
-                        </SELECT>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-                    Centre du Bacc :&nbsp&nbsp
+                        </SELECT> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                    Centre du Bacc : &nbsp&nbsp
                         <INPUT TYPE="text" NAME="CentreBacc"/><BR><BR><BR><BR>
-                    Numero d'inscription :&nbsp&nbsp
-                        <INPUT TYPE="text" NAME="NumInscription"/>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-                    Serie :&nbsp&nbsp
+                    Numero d'inscription : &nbsp&nbsp
+                        <INPUT TYPE="text" NAME="NumInscription" required/>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                    Serie : &nbsp&nbsp
                         <SELECT NAME="Serie">
                             <OPTION>S</OPTION>
                             <OPTION>C</OPTION>
                         </SELECT><BR><BR><BR><BR>
-                    Mention :&nbsp&nbsp
-                        <INPUT TYPE="text" VALUE="Très-Bien..." NAME="Mention"/>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-                    Moyenne lors du Bacc :&nbsp&nbsp
+                    Mention : &nbsp&nbsp
+                        <INPUT TYPE="text" placeholder="Très-Bien..." NAME="Mention" required/>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                    Moyenne lors du Bacc : &nbsp&nbsp
                         <INPUT TYPE="text" NAME="Moyenne"/><BR><BR><BR><BR>
-                    E-mail :&nbsp&nbsp
-                        <INPUT style="width: 300;" NAME="Email" TYPE="text"/>&nbsp&nbsp&nbsp&nbsp
-                    Telephone :&nbsp&nbsp
-                        <INPUT TYPE="text" NAME="Telephone"/><BR><BR><BR><BR><BR><BR>
+                    E-mail : &nbsp&nbsp
+                        <INPUT style="width: 300;" NAME="Email" TYPE="email" required/>&nbsp&nbsp&nbsp&nbsp
+                    Telephone : &nbsp&nbsp
+                        <INPUT TYPE="tel" NAME="Telephone"/><BR><BR><BR><BR><BR><BR>
 
                         <INPUT style="width: 100;height: 40;" TYPE="submit" VALUE="S'inscrire"><BR><BR><BR>
                 </FORM></CENTER></TD>
-                <TD><FONT COLOR="black">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</FONT></TD>
+                <TD><FONT COLOR="black"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</FONT></TD>
                 <TD><CENTER><IMG SRC="logo2.jpeg" style="border-radius: 50% 50% 50% 50%;" width="200" height="200"><br><br><br><br><br><br><br><br><br><br><br><br><IMG SRC="logo1.jpeg" style="border-radius: 50% 50% 50% 50%;" width="200" height="200"></CENTER></TD>
             </TR>
         </CENTER></TABLE>
