CV-PagePerso-Formulaire

--- a/HTLM/CV_PagePerso/CV.html
+++ b/HTLM/CV_PagePerso/CV.html
@@ -5,9 +5,9 @@
     <BR>
     <BODY>
  
-    <table>
+    <table  width="70%" style="margin: auto;">
     <TR>
-        <TD><pre>                           </pre></TD>
+        <!-- <TD><pre>                           </pre></TD> -->
 
     <!-- ------------------------------------------------------------------------------------ -->
     <CENTER>
@@ -15,10 +15,8 @@
         <TABLE bgcolor="Pink">
         <TR>
             <!-- <th colspan="2"></th> -->
-            <TD><img SRC="femme.avif" width="250" height="300"></TD>
-            <!-- espacement -->
-            <TD><pre>                            </pre></TD>
-            <TD>
+            <TD   width="60%" ><img SRC="femme.avif" width="250" height="300"></TD>
+            <TD width="30%">
                 <UL>
                     <LI>NOM:RANDRIANARISOA</LI>
                     <br>
@@ -29,7 +27,7 @@
 		    <LI>AGE: 18ans</LI>
                 </UL>
             </TD>
-            <TD><pre>              </pre></TD>
+            <TD Width="10%">
         </TR>
     </TABLE>
 <!-- -------------------------------------------------------------------------------- -->
@@ -94,7 +92,6 @@
 <!-- -------------------------------------------------------------------------------------- -->
     <TABLE>
         <TR>
-                <!-- <th colspan="2"></th> -->
             <TD  bgcolor="#EE EF 80">
                 <UL>
                     <h5>Centre d'interêts :<FONT color="##EE EF 80">.....</FONT></h5>
@@ -126,8 +123,6 @@
     </TABLE>
      </TD>
 <!-- ------------------------------------------------------------------------ -->
-<!--  
-    <TD><FONT COLOR="white">..................</FONT></TD> -->
     </TR>
 </table>
  
