--- a/HTLM/CV_PagePerso/maPage.html
+++ b/HTLM/CV_PagePerso/maPage.html
@@ -68,11 +68,9 @@
 				<h3><FONT COLOR="brown">Biographie</FONT></h3>
 				<P style="line-height:2;">Richard D. (dit « Rick ») Warren, né le 28 janvier 1954 à San José (fils de Jimmy et Dot Warren1), est un pasteur chrétien évangélique baptiste, fondateur de l'Église Saddleback, une megachurch baptiste basée à Lake Forest en Californie aux États-Unis. Il est l'initiateur du P.E.A.C.E. Plan et l’auteur de nombreux ouvrages chrétiens, notamment Une vie motivée par l'essentiel. Il fut diplômé de l’école secondaire en 1972. Il a étudié à l'Université baptiste de Californie de Riverside, en Californie, et a obtenu un Bachelor of Arts, puis il a étudié en théologie au Séminaire théologique baptiste du Sud-Ouest à Fort Worth, Texas et a obtenu un master (Master of Divinity) en 19791. Il a également étudié au Séminaire théologique Fuller à Pasadena, Californie et a obtenu un doctorat en Ministère. </P>
 				<br><br>
-				<TD><IMG SRC="warren.jpeg" width="350" height="250"></TD>
-				<TD><pre>	      </pre></TD>
-				<TD><IMG SRC="Rick.jpg" width="350" height="250"></TD>
-				<TD><pre>	      </pre></TD>
-				<TD><IMG SRC="rick2.jpg" width="350" height="250"></TD>	
+				<TD width="20%"><IMG SRC="warren.jpeg" width="350" height="250"></TD>
+				<TD align="center" width="60%"><IMG SRC="Rick.jpg" width="350" height="250"></TD>
+				<TD width="20%"><IMG SRC="rick2.jpg" width="350" height="250"></TD>	
 				<br><br>
 			</CENTER></TR>
 		</TABLE>
@@ -114,9 +112,7 @@
 		<TR><CENTER>
 			<h1><A name="Vie motivee par l'essentiel: C'est quel livre?"><FONT COLOR="#55 44 22">Vie motivee par l'essentiel: C'est quel livre?</A></FONT></h1><BR><BR><BR><BR>
 			</CENTER>
-			<TD><pre>	     </pre></TD>
-			<TD><VIDEO controls SRC="Vie.webm" type="video/webm"></TD>
-			<TD><pre>	       </pre></TD>
+			<TD width="40%" align="center"><VIDEO controls SRC="Vie.webm" type="video/webm"></TD>
 			<TD>
 				<HR><CENTER><h3><FONT COLOR="brown">Description:</FONT></h3></CENTER>
 				<P style="line-height:2;"><FONT size="2"> &nbsp&nbsp&nbsp Une vie motivée par l'essentiel ou Une vie, une passion, une destinée (anglais : The Purpose Driven Life) est un livre d’étude biblique écrit par le pasteur baptiste Rick Warren, publié en 2002 (de 400 pages) , qui explique les cinq buts de Dieu pour la vie humaine sur Terre.<BR><BR>&nbsp&nbsp&nbspLe livre est présenté comme un voyage spirituel personnel de 40 jours à travers 40 chapitres. Les 5 principales sections du livre sont l'adoration, l'Église, le discipolat, le ministère et la mission 2. Elles représentent les cinq buts de Dieu pour la vie humaine sur Terre selon lui.<BR><BR></FONT></P></CENTER>
@@ -135,13 +131,9 @@
 		<BR><BR><BR><BR><BR><BR>
 			<CENTER><h1><A name="Vie motivee par l'essentiel: Resume"><FONT COLOR="#55 44 22">Vie motivee par l'essentiel: Resume</A></FONT></h1><BR><BR><BR></CENTER>
 			<TABLE><CENTER><BR><BR>
-				<TD><pre>	     </pre></TD>
-				<TD><IMG SRC="purpose.jpg" width="250" height="350"></TD>
-				<TD><pre>		     </pre></TD>
-				<TD><IMG SRC="essentiel.jpg" width="250" height="350"></TD>
-				<TD><pre>		     </pre></TD>
-				<TD><IMG SRC="l'essentiel.jpeg" width="250" height="350"></TD>
-				<TD><pre>	     </pre></TD>
+				<TD width="20%" align="center"><IMG SRC="purpose.jpg" width="250" height="350"></TD>
+				<TD align="center" width="60%"><IMG SRC="essentiel.jpg" width="250" height="350"></TD>
+				<TD align="center" width="20%"><IMG SRC="l'essentiel.jpeg" width="250" height="350"></TD>
 			</CENTER></TABLE>
 			<TABLE><BR><BR><BR><BR><BR><CENTER><h3><FONT COLOR="brown">Pourquoi Dieu nous a cree?</FONT></h3>
 				<P style="line-height:2;">Quel est le sens de notre vie ?  Dieu aurait-il des projets pour nous, pour notre vie et pour l'eternite ?  Pendant 40 jours et autant de chapitres quotidiens, le pasteur Rick Warren propose de partir a la decouverte du sens de la vie. Voici les raisons de notre existence selon Dieu:</P><br><br>
@@ -429,7 +421,7 @@
 	<TABLE>
 		<TR><CENTER><h3><FONT COLOR="brown">Quelques avis des lecteurs sur ce livre<BR><BR></FONT></h3></CENTER></TR>	
 
-		<TR><TD><TABLE>
+		<TR><TD width="60%"><TABLE>
 			<TR  bgcolor="#EF EE DF"><TD><IMG SRC="anonym.jpg" style="border-radius: 50% 50% 50% 50%;" width="50" height="50"><b> &nbsp&nbsp&nbsp&nbsp Fathia EGUIENTA</b><br><br>
 			<FONT style="line-height: 2;" size="2">"Livre très spirituel et nous aide à prendre du recule sur nos difficultés et manière de voir la vie."</FONT><br><br></TD></TR>
 			<br>
@@ -452,7 +444,6 @@
 
 		</TABLE>
 			</TD>
-			<TD><pre>	   	  </pre></TD>
 			<TD><IMG SRC="lessentiel.png" width="500" height="500"><br><br><br><br><br><FONT size="1">Pour voir plus d'avis des lecteurs, cliquez <A HREF="https://www.amazon.fr/Une-vie-motiv%C3%A9e-lessentiel-augment%C3%A9e/dp/2940335893" target="_blank">ICI</A>.</FONT></TD>	
 		</TR>
 	</TABLE><BR><BR><BR><BR><BR><BR>
