--- a/HTLM/formulaire/formulaire.html
+++ b/HTLM/formulaire/formulaire.html
@@ -9,11 +9,9 @@
             <TR><CENTER><IMG SRC="MIT.jpg" width="1200" ></CENTER></TR>
                 <br><br><br><br><br><br>
             <TR>
-                <TD>
+                <TD width="22%" align="center">
                     <IMG SRC="logo1.jpeg" style="border-radius: 50% 50% 50% 50%;" width="200" height="200"><br><br><br><br><br><br><br><br><br><br><br><br><IMG SRC="logo2.jpeg" style="border-radius: 50% 50% 50% 50%;" width="200" height="200">
                 </TD>
-                <!-- #FF EE CC -->
-                <TD><FONT COLOR="White">..........</FONT></TD> 
                 <TD style="border-radius: 8% 8% 8% 8%;box-shadow:2vw 2vw 5vw;"><CENTER>
                 <FORM ACTION="essai.txt" METHOD="POST">
                     <BR><BR><H1><FONT COLOR="Brown">Formulaire d'inscription</FONT></H1><br><br><br>
@@ -60,8 +58,7 @@
 
                         <INPUT style="width: 100;height: 40;" TYPE="submit" VALUE="S'inscrire"><BR><BR><BR>
                 </FORM></CENTER></TD>
-                <TD><FONT COLOR="black"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</FONT></TD>
-                <TD><CENTER><IMG SRC="logo2.jpeg" style="border-radius: 50% 50% 50% 50%;" width="200" height="200"><br><br><br><br><br><br><br><br><br><br><br><br><IMG SRC="logo1.jpeg" style="border-radius: 50% 50% 50% 50%;" width="200" height="200"></CENTER></TD>
+                <TD width="21%" align="center"><CENTER><IMG SRC="logo2.jpeg" style="border-radius: 50% 50% 50% 50%;" width="200" height="200"><br><br><br><br><br><br><br><br><br><br><br><br><IMG SRC="logo1.jpeg" style="border-radius: 50% 50% 50% 50%;" width="200" height="200"></CENTER></TD>
             </TR>
         </CENTER></TABLE>
         <TABLE>        
