--- a/HTLM/CV_PagePerso/CV.html
+++ b/HTLM/CV_PagePerso/CV.html
@@ -4,8 +4,8 @@
     </HEAD>
     <BR>
     <BODY>
- 
-    <table  width="70%" style="margin: auto;">
+ <div align="center">
+    <table  width="70%">
     <TR>
         <!-- <TD><pre>                           </pre></TD> -->
 
@@ -125,6 +125,6 @@
 <!-- ------------------------------------------------------------------------ -->
     </TR>
 </table>
- 
+ </div> 
     </BODY>
 </HTML>
